# ethics_bench

./: .dockerignore  .env.example  .gitignore  AGENTBEATS_INTEGRATION.md  Dockerfile  Dockerfile.green  Dockerfile.purple  Dockerfile.white  Makefile  README.md  agentbeats_green_setup.sh  agentbeats_launcher.py  deploy.sh  deploy_lambda.sh  docker-compose.yml  green_agent_card.toml  green_agent_standalone.py  main_v3.py  network_setup.sh  ngrok_setup.sh  prepare_github.sh  pyproject.toml  requirements.txt  scenario.toml  start_agents.sh  test_agent.py  white_agent_card.toml
.github/workflows/: build-image.yml  docker-publish.yml  evaluate.yml  purple-agent-publish.yml  white-agent-publish.yml
scenarios/domain_adapt_crm/: scenario.toml  semantic_judge.py  semantic_judge_common.py  semantic_white_baseline.py
scenarios/domain_adapt_crm/episodes/: contract_breach.yml  employer_discrimination.yml  legal_to_crm.yml
src/: README.md  deploy_lambda.sh  evaluate_runner.py  green_agent_card.toml  launcher_v3.py  pyproject.toml  run_identifier.py
src/agentbeats/: client.py  client_cli.py  green_executor.py
src/green_agent/: __init__.py  agent_v3.py  green_server.py  scenarios.py  unified_logging.py  validate_red_lines.py
src/leaderboard/: __init__.py  leaderboard.py  provenance.py
src/my_util/: my_a2a.py
src/src/green_agent/: agent_v3.py  green_server.py
src/src/my_util/: __init__.py  my_a2a.py
src/src/white_agent/: agent.py
src/white_agent/: __init__.py  agent.py  callback_logging.py
